# codex-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  SSH.md  build.rs  claude-code.md
.github/workflows/: docker.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.ts  App.tsx  assets.d.ts  styles.css
migrations/: 0001_init.sql  0002_interactions.sql  0003_tool_and_tool_session.sql  0004_ssh_projects.sql
schemas/: ClientRequest.json  CommandExecutionRequestApprovalParams.json  EventMsg.json  McpServerElicitationRequestParams.json  McpServerElicitationRequestResponse.json  ServerNotification.json  ServerRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
schemas/v2/: CommandExecParams.json  ConfigReadResponse.json  ConfigRequirementsReadResponse.json  PluginInstallParams.json  RawResponseItemCompletedNotification.json  ThreadForkParams.json  ThreadForkResponse.json  ThreadResumeParams.json  ThreadResumeResponse.json  ThreadStartParams.json  (+3 more)
scripts/: claude-code-bridge-demo.sh
src/: api.rs  claude.rs  codex.rs  config.rs  db.rs  events.rs  lib.rs  main.rs  orchestrator.rs  protocol.rs  server.rs  ssh.rs  tool.rs  turns.rs
tests/: api_smoke.rs  auth_api.rs  bundled_ui.rs  claude_real_smoke.rs  claude_stub_turn.rs  codex_stub_turn.rs  conversation_lifecycle.rs  fs_api.rs  interaction_flow.rs  migrations_tool.rs  on_turn_finished_command.rs  ssh_codex_stub_turn.rs  ssh_project_api.rs
(+7 files in other folders)
