[package]
name = "codex-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
